GenAI 문구 재수정

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                         <div class="item-title" data-ko="WhiteCrow 대표" data-en="CEO, WhiteCrow">WhiteCrow 대표</div>
                         <div class="item-period">2024.03 - 현재</div>
                     </div>
-                    <div class="item-desc" data-ko="여행 서비스 'Groute' B2C 제품 기획 및 운영. 사용자 리서치, 페르소나 정의, MVP 설계. 앱스토어 출시 후 사용자 피드백 기반 제품 개선 전략 수립." data-en="B2C product planning and operation of 'Groute', a GenAI-based travel service. User research, persona definition, MVP design. Post-launch product improvement strategy based on user feedback from app store.">GenAI 기반 여행 서비스 'Groute' B2C 제품 기획 및 운영. 사용자 리서치, 페르소나 정의, MVP 설계. 앱스토어 출시 후 사용자 피드백 기반 제품 개선 전략 수립.</div>
+                    <div class="item-desc" data-ko="여행 서비스 'Groute' B2C 제품 기획 및 운영. 사용자 리서치, 페르소나 정의, MVP 설계. 앱스토어 출시 후 사용자 피드백 기반 제품 개선 전략 수립." data-en="B2C product planning and operation of 'Groute', a travel service. User research, persona definition, MVP design. Post-launch product improvement strategy based on user feedback from app store.">여행 서비스 'Groute' B2C 제품 기획 및 운영. 사용자 리서치, 페르소나 정의, MVP 설계. 앱스토어 출시 후 사용자 피드백 기반 제품 개선 전략 수립.</div>
                 </div>
                 <div class="experience-item">
                     <div class="item-header">
